Profile update to include add email input field - POST no yet

--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -1,11 +1,40 @@
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
+/*@media only screen and (min-width: 320px) and (max-width: 479px) {
+    .info {
+        font-size: 0.9vw;
+    }
 }
 
-.title {
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .info {
+        font-size: 2vw;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .info {
+        font-size: 3vw;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .info {
+        font-size: 4vw;
+    }
+}*/
+
+
+/*---------------------------------------------------------*/
+
+.card {
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+    max-width: 60%;
+    margin: auto;
+    text-align: center;
+    height: max-content;
+    border-radius: 10px;
+}
+
+/*.title {
     color: grey;
     font-size: 18px;
 }
@@ -32,3 +61,125 @@ a {
 button:hover, a:hover {
     opacity: 0.7;
 }
+
+column left {
+    float: left;
+    background-color: red;
+    border: 1px;
+    width: 35%;
+}
+
+.column right {
+    float: right;
+    width: 65%;
+    background-color: blue;
+    display: block;
+}
+
+.container {
+    height: 90vh;
+}
+
+
+!* Create two equal columns that sits next to each other *!
+.column {
+    flex: 50%;
+    padding: 10px;
+    height: 300px; !* Should be removed. Only for demonstration *!
+}*/
+
+
+/* Create two unequal columns that floats next to each other */
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.row-divider {
+    background-color: grey;
+    height: 1rem;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .card-body {
+        width: 100%;
+        height: 90vh;
+    }
+}
+
+.card-body {
+    margin: 5px;
+}
+
+.row {
+    height: inherit;
+
+}
+
+.column-left {
+    text-align: start;
+    font-size: 1rem;
+    float: left;
+    border: 2px;
+    width: 35%;
+}
+
+.column-right {
+
+    float: right;
+    text-align: start;
+    border: 2px;
+    width: 65%;
+    display: inline-block;
+}
+
+.address-title {
+    text-align: start;
+    font-size: 1.2vw;
+}
+
+.info {
+    font-size: 1.1vw;
+}
+
+.item {
+    font-weight: bold;
+    font-size: 1.1vw;
+}
+
+
+/*button {
+    border: none;
+    outline: 1px;
+    display: inline-block;
+    padding: 10px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}*/
+
+button:hover, a:hover {
+    opacity: 0.7;
+}
+
+.addbutton {
+    padding: 5px;
+    height: 20px;
+    margin: 5px;
+}
+
+/* Clear floats after the columns */
