--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -1,4 +1,4 @@
-/*@media only screen and (min-width: 320px) and (max-width: 479px) {
+@media only screen and (min-width: 320px) and (max-width: 479px) {
     .info {
         font-size: 0.9vw;
     }
@@ -20,10 +20,7 @@
     .info {
         font-size: 4vw;
     }
-}*/
-
-
-/*---------------------------------------------------------*/
+}
 
 .card {
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
@@ -32,6 +29,7 @@
     text-align: center;
     height: max-content;
     border-radius: 10px;
+    background-color: dimgray;
 }
 
 /*.title {
