--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -27,7 +27,7 @@
     max-width: 60%;
     margin: auto;
     text-align: center;
-    height: max-content;
+    /*height: 100%;*/
     border-radius: 10px;
     background-color: dimgray;
 }
@@ -144,11 +144,13 @@ column left {
 
 .address-title {
     text-align: start;
+    text-indent: 80px;
     font-size: 1.2vw;
 }
 
 .info {
     font-size: 1.1vw;
+    text-align: start;
 }
 
 .item {
@@ -156,7 +158,11 @@ column left {
     font-size: 1.1vw;
 }
 
+.input-email
+{
+    width: 75%;
 
+}
 /*button {
     border: none;
     outline: 1px;
@@ -175,9 +181,15 @@ button:hover, a:hover {
 }
 
 .addbutton {
-    padding: 5px;
+    font-size: 10px;
+    font-weight: bold;
+    vertical-align: middle;
+
+    text-justify: distribute-center-last;
+    padding: 10px;
     height: 20px;
     margin: 5px;
+    text-align: justify;
 }
 
 /* Clear floats after the columns */
