--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -8,7 +8,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50vh;
+    height: 450px;
     margin: auto;
     overflow: hidden;
     background-color: #52ec85;
@@ -17,6 +17,7 @@ body {
     width: 400px;
     box-shadow: 5px 10px 10px rgba(0, 12, 15, 0.5);
 }
+
 
 #email {
     display: block;
