--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -27,68 +27,11 @@
     max-width: 60%;
     margin: auto;
     text-align: center;
-    /*height: 100%;*/
+  height:90%;
     border-radius: 10px;
     background-color: dimgray;
 }
 
-/*.title {
-    color: grey;
-    font-size: 18px;
-}
-
-button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}
-
-a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
-}
-
-button:hover, a:hover {
-    opacity: 0.7;
-}
-
-column left {
-    float: left;
-    background-color: red;
-    border: 1px;
-    width: 35%;
-}
-
-.column right {
-    float: right;
-    width: 65%;
-    background-color: blue;
-    display: block;
-}
-
-.container {
-    height: 90vh;
-}
-
-
-!* Create two equal columns that sits next to each other *!
-.column {
-    flex: 50%;
-    padding: 10px;
-    height: 300px; !* Should be removed. Only for demonstration *!
-}*/
-
-
-/* Create two unequal columns that floats next to each other */
-/* Create two equal columns that floats next to each other */
 .column {
     float: left;
     width: 50%;
@@ -130,7 +73,7 @@ column left {
     font-size: 1rem;
     float: left;
     border: 2px;
-    width: 35%;
+    width: 15%;
 }
 
 .column-right {
@@ -138,7 +81,7 @@ column left {
     float: right;
     text-align: start;
     border: 2px;
-    width: 65%;
+    width: 85%;
     display: inline-block;
 }
 
@@ -156,11 +99,14 @@ column left {
 .item {
     font-weight: bold;
     font-size: 1.1vw;
+    text-align:start ;
+    text-indent: calc(15px + 0.3vw);
 }
 
 .input-email
 {
-    width: 75%;
+    width: 60%;
+    display: inline-flex;
 
 }
 /*button {
@@ -185,7 +131,7 @@ button:hover, a:hover {
     font-weight: bold;
     vertical-align: middle;
 
-    text-justify: distribute-center-last;
+
     padding: 10px;
     height: 20px;
     margin: 5px;
