--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -7,6 +7,7 @@
     --backgroundBlack: #262626;
     --backgroundBlackOpacity: rgba(38,38,38,0.8);
     --backgroundBlackOpacity2: rgba(38,38,38,0.2);
+    --backgroundBlackOpacity3: rgba(38,38,38,0.1);
     --backgroundGreenHover: #3bac5f;
     --defaultFont: Helvetica;
 }
@@ -93,9 +94,27 @@
     text-align: center;
 }
 
+.button-three {
+    align-items: center ;
+    position: center;
+    cursor: pointer;
+    color: var(--backgroundBlack);
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 100%;
+    border: 0;
+    padding: 15px 15px;
+    margin: 10px;
+    border-radius: 5px;
+    background: var(--backgroundBlackOpacity3);
+    text-align: center;
+}
+
 .button-two:hover{
     background:linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
     background-color: var(--backgroundGreenHover);
+
 }
 
 .button-two:active{
