small style updates in Profile

--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -98,7 +98,8 @@
     float: right;
     text-align: start;
     border: 2px;
-    width: 85%;
+    width: 75%;
+
     display: inline-block;
 }
 
@@ -126,24 +127,21 @@
     text-indent: calc(15px + 0.3vw);
 }
 
+
 .input-email
 {
-    width: 60%;
-    display: inline-flex;
+    width: 65%;
 
 }
-/*button {
-    border: none;
-    outline: 1px;
-    display: inline-block;
-    padding: 10px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}*/
+
+#email-add
+{
+    align-content: start;
+    width: 65%;
+    height: 20px;
+    border-style: none;
+    border-radius: 3px;
+}
 
 button:hover, a:hover {
     opacity: 0.7;
