--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -36,13 +36,14 @@
 
 
 .card {
-
+    position: relative;
+    top: 5%;
     justify-content: center;
     box-shadow: 0 5px 20px 0 rgba(0, 0, 2, 0.5);
     max-width: 55%;
     margin: auto;
     text-align: center;
-    height:90%;
+
     border-radius: 10px;
     background-color: var(--backgroundGreen);
 }
@@ -76,7 +77,7 @@
 
 .card-body {
     width: 100%;
-    margin: 5px;
+
     height: inherit;
 }
 
@@ -96,22 +97,24 @@
 .column-right {
     vertical-align: middle;
     float: right;
-    text-align: start;
+    text-align: start !important;
     border: 2px;
     width: 75%;
-
+    padding-top: 0 !important;
     display: inline-block;
 }
 
 .address-title {
+    font-weight: bold;
     text-align: start;
-    text-indent: 80px;
+    text-indent: 20px;
     font-size: 1.2vw;
 }
 
 .info {
-    font-size: 1.1vw;
+    font-size: 1.0vw !important;
     text-align: start;
+    vertical-align: center !important;
 }
 
 .profile-title
@@ -123,7 +126,6 @@
     font-weight: bold;
     font-size: 1.1vw;
     text-align:start ;
-
     text-indent: calc(15px + 0.3vw);
 }
 
@@ -131,6 +133,7 @@
 .input-email
 {
     width: 65%;
+    text-align: start !important;
 
 }
 
@@ -138,7 +141,7 @@
 {
     align-content: start;
     width: 65%;
-    height: 20px;
+    height: 1.5rem;
     border-style: none;
     border-radius: 3px;
 }
@@ -148,13 +151,13 @@ button:hover, a:hover {
 }
 
 .addbutton {
-    font-size: 10px;
-    font-weight: bold;
-    vertical-align: middle;
+    display: table-cell !important;
+    vertical-align: middle !important;
+    margin-left: 5px;
+    border-style: solid;
+    border-radius: 5px;
+    font-size: calc(0.9vw);
+    height: calc(1.5rem);
 
-
-    padding: 10px;
-    height: 20px;
-    margin: 5px;
-    text-align: justify;
+    font-weight: normal;
 }
