Updated button styling in add profile
Co-Authored-by: Diogo Ribeiro <1201768@isep.ipp.pt>

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -5,26 +5,26 @@
     --backgroundGrey: #e2dfdf;
     --backgroundGreyHover: #999797;
     --backgroundBlack: #262626;
-    --backgroundBlackOpacity: rgba(38,38,38,0.8);
-    --backgroundBlackOpacity2: rgba(38,38,38,0.2);
-    --backgroundBlackOpacity3: rgba(38,38,38,0.1);
+    --backgroundBlackOpacity: rgba(38, 38, 38, 0.8);
+    --backgroundBlackOpacity2: rgba(38, 38, 38, 0.2);
+    --backgroundBlackOpacity3: rgba(38, 38, 38, 0.1);
     --backgroundGreenHover: #3bac5f;
     --defaultFont: Helvetica;
 }
 
-.font-class{
+.font-class {
     font-family: Helvetica;
     font-color: var(--backgroundGrey);
 }
 
-.logo{
+.logo {
     width: 90%;
     height: auto;
     text-align: center;
 }
 
 .button-one {
-    align-items: center ;
+    align-items: center;
     position: center;
     cursor: pointer;
     color: var(--backgroundBlack);
@@ -39,8 +39,38 @@
     text-align: center;
 }
 
+.button-one-small {
+    align-items: center;
+    position: center;
+    cursor: pointer;
+    color: var(--backgroundBlack);
+    font-size: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 80%;
+    border: 0;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-left: 5px;
+    /*background: var(--backgroundGreenOpacity);*/
+    text-align: center;
+}
+
+.button-profile-alignment {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    align-self: center;
+}
+
+.button-grid{
+    display: grid;
+    grid-template-columns: 2fr 1fr ;
+    padding: 10px;
+
+}
+
 .button-one-invert {
-    align-items: center ;
+    align-items: center;
     position: center;
     cursor: pointer;
     color: var(--backgroundGrey);
@@ -55,30 +85,30 @@
     text-align: center;
 }
 
-.button-test{
-    background:linear-gradient(to bottom, var(--backgroundGreen) 5%, var(--backgroundGreen) 100%);
+.button-test {
+    background: linear-gradient(to bottom, var(--backgroundGreen) 5%, var(--backgroundGreen) 100%);
     background-color: var(--backgroundGreen);
     border-bottom: 10px var(--backgroundGreyHover) !important;
-    display:inline-block;
-    cursor:pointer;
+    display: inline-block;
+    cursor: pointer;
     font-weight: bold;
-    font-size:24px;
-    padding:6px 36px;
-    text-decoration:none;
+    font-size: 24px;
+    padding: 6px 36px;
+    text-decoration: none;
 }
 
-.button-one:hover{
-    background:linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
+.button-one:hover {
+    background: linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
     background-color: var(--backgroundGreenHover);
 }
 
-.button-one:active{
-    position:relative;
-    top:1px;
+.button-one:active {
+    position: relative;
+    top: 1px;
 }
 
 .button-two {
-    align-items: center ;
+    align-items: center;
     position: center;
     cursor: pointer;
     color: var(--backgroundBlack);
@@ -128,23 +158,24 @@
     text-align: center;
 }
 
-.button-two:hover{
-    background:linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
-    background-color: var(--backgroundGreenHover);
-
-}
-.button-two:active{
-    position:relative;
-    top:1px;
-}
-
-.button-two-small:hover{
-    background:linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
+.button-two:hover {
+    background: linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
     background-color: var(--backgroundGreenHover);
 
 }
 
-.button-two-small:active{
-    position:relative;
-    top:1px;
+.button-two:active {
+    position: relative;
+    top: 1px;
+}
+
+.button-two-small:hover {
+    background: linear-gradient(to bottom, var(--backgroundGreenHover) 5%, var(--backgroundGreenHover) 100%);
+    background-color: var(--backgroundGreenHover);
+
+}
+
+.button-two-small:active {
+    position: relative;
+    top: 1px;
 }
