--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #19191a;
+    background-color: #eaeaea !important;
 }
 
 .login {
@@ -14,7 +14,7 @@ body {
     background-color: #52ec85;
     padding: 30px 30px 30px 30px;
     border-radius: 10px;
-    width: 400px;
+    width: 420px;
     box-shadow: 5px 10px 10px rgba(0, 12, 15, 0.5);
 }
 
