--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -113,7 +113,7 @@
     cursor: pointer;
     color: var(--backgroundBlack);
     font-size: 12px;
-    font-weight: bold;
+    font-weight: bold !important;
     text-transform: uppercase;
     width: 100%;
     border: 0;
@@ -130,7 +130,7 @@
     cursor: pointer;
     color: var(--backgroundBlack);
     font-size: 16px;
-    font-weight: bold;
+    font-weight: bold !important;
     text-transform: uppercase;
     width: 40%;
     border: 0;
@@ -179,3 +179,4 @@
     position: relative;
     top: 1px;
 }
+
