--- a/frontend/src/styles/navbarBody.css
+++ b/frontend/src/styles/navbarBody.css
@@ -1,11 +1,22 @@
-.familyAdmin-1{
+i.userIcon {
+    margin-right: 15px;
+    margin-left: 10px;
+}
+
+.role {
     grid-row-start: 1;
     grid-row-end: 2;
+    justify-self: center;
+}
+
+.familyAdmin-1{
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 .familyAdmin-2{
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 .systemManager-1{
@@ -16,7 +27,3 @@
 
 }
 
-i.userIcon {
-    margin-right: 15px;
-    margin-left: 10px;
-}
